[gd_scene load_steps=8 format=2]

[ext_resource path="res://MapsRelated/MapList/Map_Enchant/GUI/MapEnchant_WholeScreenGUI/MapEnchant_WholeScreenGUI.gd" type="Script" id=1]
[ext_resource path="res://MapsRelated/MapList/Map_Enchant/GUIAssets/WholeScreenGUI_Purple_7x7.png" type="Texture" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=4]
[ext_resource path="res://MapsRelated/MapList/Map_Enchant/MapAssets/Enchant_Altar/Enchant_Altar_01.png" type="Texture" id=5]
[ext_resource path="res://MapsRelated/MapList/Map_Enchant/GUIAssets/WholeScreenGUI_Gray_7x7.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="MapEnchant_WholeScreenGUI" type="MarginContainer"]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
custom_constants/margin_top = 0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
texture = ExtResource( 6 )
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="Left" type="MarginContainer" parent="HBoxContainer"]
margin_top = 74.0
margin_right = 238.0
margin_bottom = 465.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Left"]
margin_left = 20.0
margin_top = 10.0
margin_right = 218.0
margin_bottom = 391.0
mouse_filter = 2
custom_constants/separation = 10

[node name="CurrUpgradePanel" type="MarginContainer" parent="HBoxContainer/Left/VBoxContainer"]
margin_right = 198.0
margin_bottom = 58.0
mouse_filter = 2
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Left/VBoxContainer/CurrUpgradePanel"]
margin_right = 198.0
margin_bottom = 38.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Left/VBoxContainer/CurrUpgradePanel/VBoxContainer"]
margin_right = 198.0
margin_bottom = 17.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Current Upgrade Level:"

[node name="CurrentUpgradeLabel" type="Label" parent="HBoxContainer/Left/VBoxContainer/CurrUpgradePanel/VBoxContainer"]
margin_left = 85.0
margin_top = 21.0
margin_right = 112.0
margin_bottom = 38.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "x/x"

[node name="CurrPurpleBoltAmountPanel" type="MarginContainer" parent="HBoxContainer/Left/VBoxContainer"]
margin_top = 68.0
margin_right = 198.0
margin_bottom = 106.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Left/VBoxContainer/CurrPurpleBoltAmountPanel"]
margin_right = 198.0
margin_bottom = 38.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Left/VBoxContainer/CurrPurpleBoltAmountPanel/VBoxContainer"]
margin_right = 198.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Pink Bolt Count:"

[node name="CurrentPurpleBoltAmountLabel" type="Label" parent="HBoxContainer/Left/VBoxContainer/CurrPurpleBoltAmountPanel/VBoxContainer"]
margin_top = 21.0
margin_right = 198.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "xx"

[node name="CurrPurpleBoltDamagePanel" type="MarginContainer" parent="HBoxContainer/Left/VBoxContainer"]
margin_top = 116.0
margin_right = 198.0
margin_bottom = 177.0
mouse_filter = 2
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Left/VBoxContainer/CurrPurpleBoltDamagePanel"]
margin_right = 198.0
margin_bottom = 41.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Left/VBoxContainer/CurrPurpleBoltDamagePanel/VBoxContainer"]
margin_right = 198.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Pink Bolt Damage
per Explosion:"

[node name="CurrentPurpleBoltDamageTooltipBody" parent="HBoxContainer/Left/VBoxContainer/CurrPurpleBoltDamagePanel/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 41.0
margin_right = 198.0
margin_bottom = 41.0
default_font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
default_font_size = 16

[node name="CurrBluePillarStatsPanel" type="MarginContainer" parent="HBoxContainer/Left/VBoxContainer"]
margin_top = 187.0
margin_right = 198.0
margin_bottom = 228.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Left/VBoxContainer/CurrBluePillarStatsPanel"]
margin_right = 198.0
margin_bottom = 41.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Left/VBoxContainer/CurrBluePillarStatsPanel/VBoxContainer"]
margin_right = 198.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Blue Activated
Pillar buffs:"

[node name="CurrentBluePillarStatsTooltipBody" parent="HBoxContainer/Left/VBoxContainer/CurrBluePillarStatsPanel/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 41.0
margin_right = 198.0
margin_bottom = 41.0
default_font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
default_font_size = 16

[node name="CurrYellowPillarStatsPanel" type="MarginContainer" parent="HBoxContainer/Left/VBoxContainer"]
margin_top = 238.0
margin_right = 198.0
margin_bottom = 279.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Left/VBoxContainer/CurrYellowPillarStatsPanel"]
margin_right = 198.0
margin_bottom = 41.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Left/VBoxContainer/CurrYellowPillarStatsPanel/VBoxContainer"]
margin_right = 198.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Yellow Activated
Pillar Buffs:"

[node name="CurrentYellowPillarStatsTooltipBody" parent="HBoxContainer/Left/VBoxContainer/CurrYellowPillarStatsPanel/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 41.0
margin_right = 198.0
margin_bottom = 41.0
default_font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
default_font_size = 16

[node name="CurrRedPillarStatsPanel" type="MarginContainer" parent="HBoxContainer/Left/VBoxContainer"]
margin_top = 289.0
margin_right = 198.0
margin_bottom = 330.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Left/VBoxContainer/CurrRedPillarStatsPanel"]
margin_right = 198.0
margin_bottom = 41.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Left/VBoxContainer/CurrRedPillarStatsPanel/VBoxContainer"]
margin_right = 198.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Red Activated
Pillar Buffs:"

[node name="CurrentRedPillarStatsTooltipBody" parent="HBoxContainer/Left/VBoxContainer/CurrRedPillarStatsPanel/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 41.0
margin_right = 198.0
margin_bottom = 41.0
default_font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
default_font_size = 16

[node name="CurrGreenPillarStatsPanel" type="MarginContainer" parent="HBoxContainer/Left/VBoxContainer"]
margin_top = 340.0
margin_right = 198.0
margin_bottom = 381.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Left/VBoxContainer/CurrGreenPillarStatsPanel"]
margin_right = 198.0
margin_bottom = 41.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Left/VBoxContainer/CurrGreenPillarStatsPanel/VBoxContainer"]
margin_right = 198.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Green Activated
Pillar Buffs:"

[node name="CurrentGreenPillarStatsTooltipBody" parent="HBoxContainer/Left/VBoxContainer/CurrGreenPillarStatsPanel/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 41.0
margin_right = 198.0
margin_bottom = 41.0
default_font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
default_font_size = 16

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 242.0
margin_right = 249.0
margin_bottom = 540.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Middle" type="MarginContainer" parent="HBoxContainer"]
margin_left = 253.0
margin_right = 714.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Middle"]
margin_top = 20.0
margin_right = 461.0
margin_bottom = 540.0
mouse_filter = 2
custom_constants/separation = 10

[node name="AltarIcon" type="TextureRect" parent="HBoxContainer/Middle/VBoxContainer"]
margin_left = 200.0
margin_right = 260.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 6
texture = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Middle/VBoxContainer"]
margin_top = 70.0
margin_right = 461.0
margin_bottom = 80.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20

[node name="MainTooltipBody" parent="HBoxContainer/Middle/VBoxContainer/MarginContainer" instance=ExtResource( 4 )]
margin_left = 20.0
margin_top = 10.0
margin_right = 441.0
margin_bottom = 10.0
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
default_font_size = 16

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
margin_left = 718.0
margin_right = 725.0
margin_bottom = 540.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Right" type="MarginContainer" parent="HBoxContainer"]
margin_left = 729.0
margin_top = 63.0
margin_right = 960.0
margin_bottom = 477.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Right"]
margin_left = 20.0
margin_top = 10.0
margin_right = 211.0
margin_bottom = 414.0

[node name="NextSpecialStageRoundPanel" type="MarginContainer" parent="HBoxContainer/Right/VBoxContainer"]
margin_right = 191.0
margin_bottom = 98.0
mouse_filter = 2
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Right/VBoxContainer/NextSpecialStageRoundPanel"]
margin_right = 191.0
margin_bottom = 78.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Right/VBoxContainer/NextSpecialStageRoundPanel/VBoxContainer"]
margin_left = 5.0
margin_right = 185.0
margin_bottom = 57.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Next Stage-Round for
Altar-Attacking
Enemies"
align = 1

[node name="NextSpecialStageroundLabel" type="Label" parent="HBoxContainer/Right/VBoxContainer/NextSpecialStageRoundPanel/VBoxContainer"]
margin_left = 82.0
margin_top = 61.0
margin_right = 109.0
margin_bottom = 78.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "x-x"

[node name="NumUpgradesForUndamagedPanel" type="MarginContainer" parent="HBoxContainer/Right/VBoxContainer"]
margin_top = 102.0
margin_right = 191.0
margin_bottom = 200.0
mouse_filter = 2
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Right/VBoxContainer/NumUpgradesForUndamagedPanel"]
margin_right = 191.0
margin_bottom = 78.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Right/VBoxContainer/NumUpgradesForUndamagedPanel/VBoxContainer"]
margin_left = 14.0
margin_right = 176.0
margin_bottom = 57.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Number of Upgrades
for Undamaged
Upgrader:"
align = 1

[node name="NumUpgradesForUndamagedLabel" type="Label" parent="HBoxContainer/Right/VBoxContainer/NumUpgradesForUndamagedPanel/VBoxContainer"]
margin_left = 91.0
margin_top = 61.0
margin_right = 100.0
margin_bottom = 78.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="NumUpgradesForDamagedPanel" type="MarginContainer" parent="HBoxContainer/Right/VBoxContainer"]
margin_top = 204.0
margin_right = 191.0
margin_bottom = 302.0
mouse_filter = 2
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Right/VBoxContainer/NumUpgradesForDamagedPanel"]
margin_right = 191.0
margin_bottom = 78.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Right/VBoxContainer/NumUpgradesForDamagedPanel/VBoxContainer"]
margin_left = 14.0
margin_right = 176.0
margin_bottom = 57.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Number of Upgrades
for Damaged
Upgrader:"
align = 1

[node name="NumUpgradesForDamagedLabel" type="Label" parent="HBoxContainer/Right/VBoxContainer/NumUpgradesForDamagedPanel/VBoxContainer"]
margin_left = 91.0
margin_top = 61.0
margin_right = 100.0
margin_bottom = 78.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="NumUpgradesForDepletedPanel" type="MarginContainer" parent="HBoxContainer/Right/VBoxContainer"]
margin_top = 306.0
margin_right = 191.0
margin_bottom = 404.0
mouse_filter = 2
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Right/VBoxContainer/NumUpgradesForDepletedPanel"]
margin_right = 191.0
margin_bottom = 78.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Right/VBoxContainer/NumUpgradesForDepletedPanel/VBoxContainer"]
margin_left = 14.0
margin_right = 176.0
margin_bottom = 57.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Number of Upgrades
for Completely
Damaged Upgrader:"
align = 1

[node name="NumUpgradesForDepletedLabel" type="Label" parent="HBoxContainer/Right/VBoxContainer/NumUpgradesForDepletedPanel/VBoxContainer"]
margin_left = 91.0
margin_top = 61.0
margin_right = 100.0
margin_bottom = 78.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
